DuPont DevSB/src/objects/ConstructionPts__CPConfig__c.object
<CustomObject>
    <fields>
        <fullName>ConstructionPts__Access_Level__c</fullName>
        <defaultValue>0</defaultValue>
        <description>0 - Company level (no attachment)
&gt; 1 user or group level access (see attachment)</description>
        <label>Access Level</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Config_Long_Value__c</fullName>
        <label>Config Long Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Config_Name__c</fullName>
        <externalId>true</externalId>
        <label>Config Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__Config_Value__c</fullName>
        <label>Config Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>CP Config</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>CP Config #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CP Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>